language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_expression.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\n\npub fn main() {\n  let wibble = wobble.Wibble\n}\n"
---

import wibble/wobble

pub fn main() {
  let wibble = wobble.Wibble
               ▔▔▔▔▔▔▔▔▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```

View on [HexDocs](https://hex.hexdocs.pm/wibble/wobble.html#Wibble)
