language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_function.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\ntype MyInt = Int\nfn func(value: wobble.Wibble) -> MyInt { 1 }\n"
---
import wibble/wobble
type MyInt = Int
fn func(value: wobble.Wibble) -> MyInt { 1 }
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔      


----- Hover content (markdown) -----
```gleam
fn(Wibble) -> Int
```
