language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_pattern.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{Wibble, Wobble, Wubble}\n\npub fn cycle(wibble: wobble.Wibble) {\n  case wibble {\n    Wibble -> Wobble\n    Wobble -> Wubble\n    Wubble -> Wibble\n  }\n}\n"
---

import wibble/wobble.{Wibble, Wobble, Wubble}

pub fn cycle(wibble: wobble.Wibble) {
  case wibble {
    Wibble -> Wobble
    Wobble -> Wubble
    Wubble -> Wibble
    ▔↑▔▔▔▔          
  }
}


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```
