language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_pattern_spread.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble as Wobble}\n\ntype Thing {\n  Thing(id: Int, value: Wobble)\n}\n\npub fn main(thing: Thing) {\n  case thing {\n    Thing(id: 0, ..) -> 12\n    _ -> 14\n  }\n}\n"
---

import wibble/wobble.{type Wibble as Wobble}

type Thing {
  Thing(id: Int, value: Wobble)
}

pub fn main(thing: Thing) {
  case thing {
    Thing(id: 0, ..) -> 12
                 ↑▔       
    _ -> 14
  }
}


----- Hover content (markdown) -----
Unused labelled fields:
- `value: Wobble`
