language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_unqualified.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble}\nconst value = wobble.Wobble\n"
---

import wibble/wobble.{type Wibble}
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content (markdown) -----
```gleam
Wibble
```
