language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_unqualified_aliased.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble as Wobble}\nconst value = wobble.Wobble\n"
---

import wibble/wobble.{type Wibble as Wobble}
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content (markdown) -----
```gleam
Wobble
```
