language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_expression_uses_type_alias_with_internal_generic_argument.snap
---
source: language-server/src/tests/hover.rs
expression: "\n@internal\npub type Connection\n\npub type Request =\n  List(Connection)\n\npub fn main(request: Request) {\n  request\n}\n"
---

@internal
pub type Connection

pub type Request =
  List(Connection)

pub fn main(request: Request) {
  request
  ↑▔▔▔▔▔▔
}


----- Hover content (markdown) -----
```gleam
Request
```
A locally defined variable.
