language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_expressions_in_function_body.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn append(x, y) {\n  x <> y\n}\n"
---

fn append(x, y) {
  x <> y
  ↑     
}


----- Hover content (markdown) -----
```gleam
String
```
A locally defined variable.
