language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_function_with_another_value_same_name.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport a/example_module.{my_const as discarded}\nimport b/example_module.{my_const} as _\nfn main() {\n    my_const\n}\n"
---

import a/example_module.{my_const as discarded}
import b/example_module.{my_const} as _
fn main() {
    my_const
    ▔▔▔▔↑▔▔▔
}


----- Hover content (markdown) -----
```gleam
Int
```

View on [HexDocs](https://hex.hexdocs.pm/b/example_module.html#my_const)
