language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_imported_constants.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module\nfn main() {\n  example_module.my_const\n}\n"
---

import example_module
fn main() {
  example_module.my_const
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔
}


----- Hover content (markdown) -----
```gleam
Int
```

View on [HexDocs](https://hex.hexdocs.pm/example_module.html#my_const)
